Edited wiki page ConfigurationManagement_vn through web user interface.

--- a/wiki/ConfigurationManagement_vn.wiki
+++ b/wiki/ConfigurationManagement_vn.wiki
@@ -2,9 +2,14 @@
 
 = Giới thiệu =
 
-Add your content here.
+Tài liệu này mô tả quy trình quản lý cấu hình (Configuration Management) của dự án e-biz
 
 
 = Chi tiết =
 
-Cấu trúc thư mục dự án trên server
+Cấu trúc thư mục dự án trên server https://e-biz.googlecode.com/svn/trunk
+
+|| Thư mục || Mô tả ||
+|| Document || Lưu tài liệu của dự án: yêu cầu, thiết kế,v.v... ||
+|| SourceCode || Lưu mã nguồn của dự án ||
+|| Study || Lưu mã nguồn, tài liệu nghiên cứu, đào tạo, ví dụ demo của dự án ||
