--- a/SourceCode/Android/android_server/res/values/strings.xml
+++ b/SourceCode/Android/android_server/res/values/strings.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, Android_serverActivity!</string>
-    <string name="app_name">Android_server</string>
+	<string name="hello">Hello World, Android_serverActivity!</string>
+	<string name="app_name">Android_server</string>
+	<string name="promotion_start">Start services</string>
+	<string name="promotion_stop">Stop service</string>
+	<string name="promotion_restart">Restart services</string>
+	<string name="promotion_title">Quản lý quảng cáo SMS</string>
+	<string name="title_error">Warning</string>
+	<string name="msg_error">Can not translate. Please connect to the internet
+		and try again.
+	</string>
+	<string name="exit">Exit</string>
+	<string name="exit_msg">Do you want to exit the application?</string>
+	<string name="no_item">No item.</string>
+	<string name="sms_send">SMS sent.</string>
+	<string name="generic_failure">Generic failure.</string>
+	<string name="no_service">No service.</string>
+	<string name="null_pdu">Null PDU.</string>
+	<string name="radio_off">Radio off.</string>
+	<string name="sms_delivered">SMS delivered.</string>
+	<string name="sms_not_delivered">SMS not delivered.</string>
+	<string name="remind_at_start">Don\'t show next time.</string>
+	<string name="chatstaff_button">Gửi</string>
+	<string name="chatstaff_title">chat staff</string>
 </resources>
