--- a/trunk/SourceCode/Android/android_staff/res/values/strings.xml
+++ b/trunk/SourceCode/Android/android_staff/res/values/strings.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <string name="hello">Hello World, Android_staffActivity!</string>
-    <string name="app_name">Android_staff</string>
-    <string name="login_title">Đăng nhập hệ thống</string>
-    <string name="login_user">Tài khoản:</string>
-    <string name="login_password">Mật khẩu:</string>
-    <string name="login_ok">Đăng nhập</string>
-    <string name="login_exit">Hủy</string>
+	<string name="login_fasle">Đăng nhập thất bại!</string>
+	<string name="hello">Hello World, Android_staffActivity!</string>
+	<string name="app_name">Android_staff</string>
+	<string name="login_title">Đăng nhập hệ thống</string>
+	<string name="login_user">Tài khoản:</string>
+	<string name="login_password">Mật khẩu:</string>
+	<string name="login_ok">Đăng nhập</string>
+	<string name="login_exit">Hủy</string>
+	<string name="delivery_content_title">Hệ thống giao hàng</string>
 </resources>
