--- a/trunk/SourceCode/Android/android_client/res/values/strings.xml
+++ b/trunk/SourceCode/Android/android_client/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="accountinfo_tabb">Thông tin chi tiết:</string>
     <string name="accountinfo_titleb">Thông tin chi tiết:</string>
     <string name="accountinfo_update">Sửa thông tin</string>
+    <string name="menu_login">Login</string>
+    <string name="favourite_title">Favourite</string>
 </resources>
