--- a/trunk/SourceCode/Android/android_client/res/values/strings.xml
+++ b/trunk/SourceCode/Android/android_client/res/values/strings.xml
@@ -2,27 +2,27 @@
 <resources>
     <string name="hello">Hello World, Android_clientActivity!</string>
     <string name="app_name">Android_client</string>
-    <string name="register_title">Đăng ký</string>
+    <string name="register_title">Register</string>
     <string name="register_email">E-mail:</string>
-    <string name="register_nickname">Tên Thành Viên (Nickname):</string>
-    <string name="register_password">Mật Khẩu (Password):</string>
-    <string name="register_sex">Giới Tính (Sex):</string>
-    <string name="register_phone">Số Điện Thoại (Phone):</string>
-    <string name="register_name">Họ Tên (Full Name):</string>
-    <string name="register_address">Địa Chỉ (Address):</string>
-    <string name="register_birthday">Ngày Sinh (Date of Birth):</string>
-    <string name="register_check">Tôi đồng ý với các điều khoản Thỏa thuận sử dụng</string>
-    <string name="register_button">Tạo Tài Khoản</string>
-    <string name="login_username">Tên đăng nhập (hoặc e-mail):</string>
-    <string name="login_password">Mật khẩu:</string>
-    <string name="login_register">Đăng Ký</string>
-    <string name="login_login">Đăng Nhập</string>
+    <string name="register_nickname">Username:</string>
+    <string name="register_password">Password:</string>
+    <string name="register_sex">Sex:</string>
+    <string name="register_phone">Phone:</string>
+    <string name="register_name">Full Name:</string>
+    <string name="register_address">Address:</string>
+    <string name="register_birthday">Date of Birth:</string>
+    <string name="register_check">I agree to the terms of use  agreement</string>
+    <string name="register_button">Create  Account</string>
+    <string name="login_username">Username (or e-mail):</string>
+    <string name="login_password">Password:</string>
+    <string name="login_register">Register</string>
+    <string name="login_login">Login</string>
     <string name="exit">Bạn có muốn thoát khỏi chương trình?</string>
     <string name="about_school">Trường Đại Học Công Nghệ Thông Tin</string>
     <string name="about_doan">Luận văn:</string>
     <string name="about_name">Xây dựng ứng dụng thương mại điện tử trên nền tảng điện toán đám mây và Android.</string>
     <string name="about_ownera">Nguyễn Thanh Phong 07520440</string>
-    <string name="about_ownerb">Nguyễn Thị Thúy</string>
+    <string name="about_ownerb">Nguyễn Thị Thúy         07520349</string>
     <string name="about_teachera">Ths.Phạm Thi Vương</string>
     <string name="about_teacherb">Ths.Lê Ngọc Thạch</string>
     <string name="about_khoa">Khoa Mạng Máy Tính &amp; Truyền Thông</string>
@@ -60,4 +60,35 @@
     <string name="accountinfo_update">Sửa thông tin</string>
     <string name="menu_login">Login</string>
     <string name="favourite_title">Favourite</string>
+    <string name="item">items</string>
+    <string name="favourite_advance_a">Advanced</string>
+    <string name="favourite_advance_b">Update</string>
+    <string name="settings_titlebar">Show title bar</string>
+    <string name="settings_volume">Sound volume</string>
+    <string name="settings_category_caidatchung">Application setting</string>
+    <string name="settings_category_network">Network setting</string>
+    <string name="settings_server">Address server</string>
+    <string name="settings_serveroff">Enable application offline</string>
+    <string name="settings_history">Clear history</string>
+    <string name="settings_maximum">Maximum save items</string>
+    <string name="setting_reminder">Enable reminder</string>
+    <string name="settings_category_user">User Setting</string>
+    <string name="menu_successful">Login successful !</string>
+    <string name="menu_fail">Please check username or password !</string>
+    <string name="login_showpass">Show password</string>
+    <string name="menu_waiting">please wait...</string>
+    <string name="register_statusa">Register successful!</string>
+    <string name="register_statusb">Please item !</string>
+    <string name="deals_price">Price </string>
+    <string name="deals_sale">Sale </string>
+    <string name="vnd"> vnđ</string>
+    <string name="buyer">buyer</string>
+    <string name="add_xu_true">Successful!</string>
+    <string name="add_xu_fasle">Productkey not correct!</string>
+    <string name="add_xu_addproductkey">Please enter productkey!</string>
+    <string name="transfer_xu_status">please  enter information!</string>
+    <string name="transfer_successful">Transfer successful!</string>
+    <string name="transfer_enough_xu">You are not enough xu!</string>
+    <string name="transfer_username">Username transfer not exist!</string>
+    <string name="transfer_not_successful">Transfer not successful!</string>
 </resources>
