--- a/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -5,6 +5,14 @@ home.right.account.xu=T\u00E0i kho\u1EA3n Xu
 home.right.account.logout=\u0110\u0103ng xu\u1EA5t
 home.right.login.name=T\u00EAn \u0111\u0103ng nh\u00E2p
 home.right.login.title=\u0110\u0102NG NH\u1EACP
+home.content.title=C\u00E1c s\u1EA3n ph\u1EA9m khuy\u1EBFn m\u00E3i
+home.content.food.id=M\u00E3 s\u1EA3n ph\u1EA9m
+home.content.food.compare=So s\u00E1nh v\u1EDBi c\u1EEDa h\u00E0ng kh\u00E1c
+home.content.food.name=T\u00EAn s\u1EA3n ph\u1EA9m
+home.content.food.price=Gi\u00E1 b\u00ECnh th\u01B0\u1EDDng
+home.content.food.priceP=Gi\u00E1 khuy\u1EBFn m\u00E3i
+home.content.food.button1=xem
+home.content.food.button2=mua
 home.right.login.password=M\u1EADt kh\u1EA9u
 home.right.login.button=\u0110\u0103ng nh\u1EADp
 home.right.shopping.food=m\u00F3n h\u00E0ng
@@ -41,6 +49,18 @@ home.nav.menu5=C\u1EEDa h\u00E0ng
 home.nav.menu6=T\u00E0i kho\u1EA3n
 home.nav.search.value=Nh\u1EADp t\u00EAn th\u1EE9c \u0103n
 home.search=T\u00CCM KI\u1EBEM
+category.menu.title=T\u00D9Y CH\u1ECCN
+category.menu.title1=GI\u00C1 TI\u1EC0N
+category.menu.name=M\u00D3N \u0102N
+category.content.page=Trang
+category.content.display=Hi\u1EC3n th\u1ECB
+category.content.display1=s\u1EA3n ph\u1EA9m m\u1ED7i trang 
+category.content.order=S\u1EAFp x\u1EBFp t\u0103ng d\u1EA7n theo
+category.content.order.value1=T\u00EAn
+category.content.order.value2=Gi\u00E1 ti\u1EC1n
+category.content.order.value3=L\u01B0\u1EE3t ng\u01B0\u1EDDi mua
+category.content.number=S\u1ED1 l\u01B0\u1EE3ng
+category.content.order1=S\u1EAFp x\u1EBFp gi\u1EA3m d\u1EA7n theo
 home.search.text=Nh\u1EADp v\u00E0o
 home.search.optional1=Lo\u1EA1i th\u1EF1c ph\u1EA9m
 home.search.optional2=Ki\u1EC3u th\u1EF1c ph\u1EA9m
@@ -62,3 +82,59 @@ home.search.optional4.1=Khuy\u1EBFn m\u00E3i
 home.search.optional4.2=B\u00ECnh th\u01B0\u1EDDng
 home.search.value2=Ch\u1ECDn qu\u1EADn
 home.search.button=T\u00ECm ki\u1EBFm
+
+
+
+error.AP              = Ten dang nhap hay mat khau bi sai
+xu.notEnough=S\u1ED1 ti\u1EC1n trong t\u00E0i kho\u1EA3n Xu kh\u00F4ng \u0111\u1EE7\! Vui l\u00F2ng n\u1EA1p th\u00EAm
+changePassword.passwrong=M\u1EADt kh\u1EA9u c\u0169 nh\u1EADp v\u00E0o b\u1ECB sai
+changePassword.duplicated=M\u1EADt kh\u1EA9u m\u1EDBi nh\u1EADp kh\u00F4ng tr\u00F9ng nhau
+changePassword.madatory=Vui l\u00F2ng nh\u1EADp c\u00E1c gi\u00E1 tr\u1ECB c\u1EA7n thi\u1EBFt
+providerFormLogin.loginId=T\u00EAn \u0111\u0103ng nh\u1EADp
+providerFormLogin.loginPassword=M\u1EADt kh\u1EA9u
+providerForm.register=C\u00E1c m\u1EE5c b\u1EAFt bu\u1ED9c
+providerForm.registerMadatory=Vui l\u00F2ng nh\u1EADp c\u00E1c m\u1EE5c b\u1EAFt bu\u1ED9c
+error.Account         = Username "{0}" is invalid.
+error.Address         = Nhap vao dia chi
+error.LogonFailed     = ??ng nh?p kh\u00F4ng th\u00E0nh c\u00F4ng
+error.Number          = Nhap vao so dien thoai
+error.P               = Pass nhap lai khong trung voi pass nhap vao
+error.Pass            = Nhap Pass
+error.PasswordInvalid = Password is invalid.
+error.Repass          = Nhap lai pass
+error.chitiet         = Nhap vao chi tiet
+error.gia             = Nhap gia phai lon hon 0
+error.msp             = Ma san pham  "{0}" sai
+error.sl              = Nhap so luong lon hon 0
+
+errors.duplicated = T\u00EAn \u0111\u0103ng nh\u1EADp \u0111\u00E3 t\u1ED3n t\u1EA1i
+errors.email      = {0} l\u00E0 m\u1ED9t \u0111\u1ECBa ch\u1EC9 mail kh\u00F4ng h\u1EE3p l\u1EC7
+errors.minlength  = {0} ph\u1EA3i l\u1EDBn h\u01A1n 8 k\u00ED t\u1EF1.
+nganluong.false=Thanh to\u00E1n th\u1EA5t b\u1EA1i. Vui l\u00F2ng th\u1EED l\u1EA1i ho\u1EB7c l\u1EF1a ch\u1ECDn ki\u1EC3u thanh to\u00E1n kh\u00E1c\!
+errors.required   = Ph\u1EA3i nh\u1EADp {0}.
+
+login.email          = Email
+login.loginId        = T\u00EAn \u0111\u0103ng nh\u1EADp
+login.loginPassword  = M\u1EADt kh\u1EA9u
+login.password.wrong = M\u1EADt kh\u1EA9u kh\u00F4ng \u0111\u00FAng
+login.user.existed   = T\u00E0i kho\u1EA3n n\u00E0y kh\u00F4ng t\u1ED3n t\u1EA1i
+
+msg.DB      = DT
+msg.images  = Images/
+msg.pass    = 123456
+msg.title   = Trang ch\u1EE7
+msg.user    = a
+msg.welcome = Welcome to Simple Authentication Application
+
+password.notmatch = M\u1EADt kh\u1EA9u ph\u1EA3i gi\u1ED1ng nhau
+
+register.address  = Address
+register.email    = Email
+register.fullname = Full name
+register.number   = Phone number
+register.pass     = Password
+register.repass   = Re-type password
+register.user     = User
+
+shopping.update   = Sá» lÆ°á»£ng sáº£n pháº©m khÃ´ng Äá»§
+shopping.invalidNumber = S\u1ED1 n\u00E0y kh\u00F4ng h\u1EE3p l\u1EC7
