--- a/SourceCode/KLTN/src/ApplicationResources_en.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_en.properties
@@ -79,9 +79,29 @@ category.content.page=Page
 category.content.display=Display
 category.content.display1=product per page
 category.content.order=Ascending order
-category.content.order1=Descending order
+category.content.order1=S\u1EAFp x\u1EBFp gi\u1EA3m d\u1EA7n theo
 category.menu.title1=PRICE LEVEL
 category.content.order.value1=Name
 category.content.order.value2=Price
 category.content.order.value3=Number of buyers
 category.content.number=Number
+
+product.provider.name=C\u1EEDa h\u00E0ng
+product.provider.showAdd=ch\u1EC9 \u0111\u01B0\u1EDDng
+product.voucher.slogan=Get Voucher to enjoy food at the store with cheaper prices
+product.voucher.number=Number voucher
+product.voucher.button=Get voucher
+product.detail=Detail Information
+product.cooking=Cooking Instruction
+product.refer=You are interested in these products?
+product.price=Price
+shopping.food.name=T\u00EAn s\u1EA3n ph\u1EA9m
+
+shopping.subMoney=Sub amount
+shopping.updateProduct=Update
+shopping.title=Shopping Cart
+shopping.delProduct=Delete
+shopping.continue=Continue to buy
+shopping.new=Create new shopping cart
+shopping.order=Order
+shopping.sumMoney=Sum Money
