--- a/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -7,6 +7,7 @@ home.right.login.name=T\u00EAn \u0111\u0103ng nh\u00E2p
 home.right.login.title=\u0110\u0102NG NH\u1EACP
 home.content.title=C\u00E1c s\u1EA3n ph\u1EA9m khuy\u1EBFn m\u00E3i
 home.content.food.id=M\u00E3 s\u1EA3n ph\u1EA9m
+product.status=H\u1EBFt khuy\u1EBFn m\u00E3i
 home.content.food.compare=So s\u00E1nh v\u1EDBi c\u1EEDa h\u00E0ng kh\u00E1c
 home.content.food.name=T\u00EAn s\u1EA3n ph\u1EA9m
 home.content.food.price=Gi\u00E1 b\u00ECnh th\u01B0\u1EDDng
@@ -60,6 +61,24 @@ category.content.order.value1=T\u00EAn
 category.content.order.value2=Gi\u00E1 ti\u1EC1n
 category.content.order.value3=L\u01B0\u1EE3t ng\u01B0\u1EDDi mua
 category.content.number=S\u1ED1 l\u01B0\u1EE3ng
+product.provider.name=C\u1EEDa h\u00E0ng
+shopping.title=Gi\u1ECF h\u00E0ng
+shopping.food.name=T\u00EAn s\u1EA3n ph\u1EA9m
+product.provider.showAdd=ch\u1EC9 \u0111\u01B0\u1EDDng
+product.voucher.slogan=Nh\u1EADn Voucher \u0111\u1EC3 th\u01B0\u1EDFng th\u1EE9c m\u00F3n \u0103n t\u1EA1i c\u1EEDa h\u00E0ng v\u1EDBi m\u1EE9c gi\u00E1 r\u1EBB h\u01A1n
+product.voucher.number=S\u1ED1 Voucher
+product.voucher.button=Mua
+product.detail=Th\u00F4ng tin chi ti\u1EBFt
+product.cooking=H\u01B0\u1EDBng d\u1EABn n\u1EA5u
+product.refer=B\u1EA1n quan t\u00E2m \u0111\u1EBFn nh\u1EEFng s\u1EA3n ph\u1EA9m n\u00E0y ?
+product.price=Gi\u00E1
+shopping.subMoney=Th\u00E0nh ti\u1EC1n
+shopping.updateProduct=C\u1EADp nh\u1EADt
+shopping.delProduct=X\u00F3a
+shopping.continue=Ti\u1EBFp t\u1EE5c mua h\u00E0ng
+shopping.new=T\u1EA1o gi\u1ECF h\u00E0ng
+shopping.order=\u0110\u1EB7t h\u00E0ng
+shopping.sumMoney=T\u1ED5ng ti\u1EC1n
 category.content.order1=S\u1EAFp x\u1EBFp gi\u1EA3m d\u1EA7n theo
 home.search.text=Nh\u1EADp v\u00E0o
 home.search.optional1=Lo\u1EA1i th\u1EF1c ph\u1EA9m
