--- a/trunk/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/trunk/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -50,6 +50,30 @@ home.nav.menu5=C\u1EEDa h\u00E0ng
 home.nav.menu6=T\u00E0i kho\u1EA3n
 home.nav.search.value=Nh\u1EADp t\u00EAn th\u1EE9c \u0103n
 home.search=T\u00CCM KI\u1EBEM
+home.search.gm=T\u00ECm \u0111\u1ECBa ch\u1EC9 c\u1EEDa h\u00E0ng
+checkout.title=Thanh to\u00E1n
+checkout.info=Nh\u1EADp th\u00F4ng tin c\u1EA7n thi\u1EBFt
+checkout.fullname=H\u1ECD v\u00E0 t\u00EAn
+checkout.phone=\u0110i\u1EC7n tho\u1EA1i
+checkout.mail=Email
+checkout.dateShip=Ng\u00E0y giao h\u00E0ng
+checkout.note=L\u1EDDi nh\u1EAFn
+checkout.note.info=Nh\u1EADp th\u1EDDi gian giao th\u1EF1c ph\u1EA9m, y\u00EAu c\u1EA7u
+checkout.button.type=Ch\u1ECDn h\u00ECnh th\u1EE9c thanh to\u00E1n
+checkou.button.save=\u0110\u1EB7t l\u00E0m th\u00F4ng tin giao h\u00E0ng m\u1EB7c \u0111\u1ECBnh
+checkou.invemail=\u0110\u1ECBa ch\u1EC9 email kh\u00F4ng h\u1EE3p l\u1EC7
+checkout.optional.title=L\u1EF0A CH\u1ECCN H\u00CCNH TH\u1EE8C THANH TO\u00C1N
+checkout.money=S\u1ED1 ti\u1EC1n thanh to\u00E1n l\u00E0
+checkout.optional.home=Thanh to\u00E1n b\u1EB1ng ti\u1EC1n m\u1EB7t t\u1EA1i nh\u00E0
+checkout.optional.xu=Thanh to\u00E1n v\u1EDBi t\u00E0i kho\u1EA3n Xu
+bill.title=H\u00F3a \u0111\u01A1n thanh to\u00E1n
+bill.message=Ch\u00FAng t\u00F4i s\u1EBD g\u1EDFi th\u00F4ng tin \u0111\u01A1n \u0111\u1EB7t h\u00E0ng th\u00F4ng qua mail v\u00E0 \u0111i\u1EC7n tho\u1EA1i c\u1EE7a qu\u00FD kh\u00E1ch
+bill.sum=T\u1ED5ng ti\u1EC1n
+bill.id=M\u00E3 h\u00F3a \u0111\u01A1n
+bill.idCustomer=M\u00E3 kh\u00E1ch h\u00E0ng
+bill.nameCustomer=T\u00EAn kh\u00E1ch h\u00E0ng
+bill.add=\u0110\u1ECBa ch\u1EC9 giao h\u00E0ng
+bill.orderDay=\ Ng\u00E0y \u0111\u1EB7t h\u00E0ng
 category.menu.title=T\u00D9Y CH\u1ECCN
 category.menu.title1=GI\u00C1 TI\u1EC0N
 category.menu.name=M\u00D3N \u0102N
@@ -103,6 +127,33 @@ home.search.value2=Ch\u1ECDn qu\u1EADn
 home.search.button=T\u00ECm ki\u1EBFm
 
 
+customer.register.title=T\u1EA1o m\u1ED9t t\u00E0i kho\u1EA3n m\u1EDBi
+customer.register.name=T\u00EAn \u0111\u0103ng nh\u1EADp
+customer.register.fullName=T\u00EAn
+customer.register.birth=Ng\u00E0y sinh
+customer.register.home=S\u1ED1 nh\u00E0
+customer.register.street=T\u00EAn \u0111\u01B0\u1EDDng
+customer.register.ward=Ph\u01B0\u1EDDng
+customer.register.building=T\u00F2a nh\u00E0
+customer.register.district=Qu\u1EADn
+customer.register.isMail=Nh\u1EADn th\u00F4ng tin khuy\u1EBFn m\u00E3i qua email
+customer.register.isPhone=Nh\u1EADn th\u00F4ng tin khuy\u1EBFn m\u00E3i qua di \u0111\u1ED9ng
+customer.register.gender=Gi\u1EDBi t\u00EDnh
+customer.register.button=\u0110\u0103ng k\u00ED
+customer.register.button1=X\u00F3a h\u1EBFt
+customer.register.required=Y\u00EAu c\u1EA7u nh\u1EADp
+customer.register.rule=\u00EDt nh\u1EA5t 8 k\u00ED t\u1EF1
+customer.register.gender.male=Nam
+customer.register.gender.feMale=N\u1EEF
+customer.register.district.choose=Ch\u1ECDn qu\u1EADn
+customer.register.pass=M\u1EADt kh\u1EA9u
+customer.register.passRe=Nh\u1EADp l\u1EA1i m\u1EADt kh\u1EA9u
+customer.register.phone=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i
+customer.register.mail=Email
+customer.register.mandatory=Th\u00F4ng tin b\u1EAFt bu\u1ED9c
+customer.register.info=Th\u00F4ng tin kh\u00E1ch h\u00E0ng 
+login.loginId = T\u00EAn \u0111\u0103ng nh\u1EADp
+
 
 error.AP              = Ten dang nhap hay mat khau bi sai
 xu.notEnough=S\u1ED1 ti\u1EC1n trong t\u00E0i kho\u1EA3n Xu kh\u00F4ng \u0111\u1EE7\! Vui l\u00F2ng n\u1EA1p th\u00EAm
@@ -133,7 +184,6 @@ nganluong.false=Thanh to\u00E1n th\u1EA5t b\u1EA1i. Vui l\u00F2ng th\u1EED l\u1E
 errors.required   = Ph\u1EA3i nh\u1EADp {0}.
 
 login.email          = Email
-login.loginId        = T\u00EAn \u0111\u0103ng nh\u1EADp
 login.loginPassword  = M\u1EADt kh\u1EA9u
 login.password.wrong = M\u1EADt kh\u1EA9u kh\u00F4ng \u0111\u00FAng
 login.user.existed   = T\u00E0i kho\u1EA3n n\u00E0y kh\u00F4ng t\u1ED3n t\u1EA1i
