--- a/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -50,7 +50,17 @@ home.nav.menu5=C\u1EEDa h\u00E0ng
 home.nav.menu6=T\u00E0i kho\u1EA3n
 home.nav.search.value=Nh\u1EADp t\u00EAn th\u1EE9c \u0103n
 home.search=T\u00CCM KI\u1EBEM
+
 home.search.gm=T\u00ECm \u0111\u1ECBa ch\u1EC9 c\u1EEDa h\u00E0ng
+home.search.gm1.button=Xem \u0111\u01B0\u1EDDng \u0111i
+home.search.gm1.to=T\u1EDBi
+home.search.gm1=T\u00ECm \u0111\u01B0\u1EDDng \u0111i
+home.search.gm.from=B\u1EAFt \u0111\u1EA7u
+home.search.gm.to=\u0110\u1EBFn c\u1EEDa h\u00E0ng
+home.search.gm.button=T\u00ECm \u0111\u01B0\u1EDDng
+home.search.gm.name=T\u00EAn c\u1EEDa h\u00E0ng
+home.search.gm.button1=T\u00ECm \u0111\u1ECBa ch\u1EC9
+
 checkout.title=Thanh to\u00E1n
 checkout.info=Nh\u1EADp th\u00F4ng tin c\u1EA7n thi\u1EBFt
 checkout.fullname=H\u1ECD v\u00E0 t\u00EAn
