--- a/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -39,7 +39,15 @@ home.right.xu.value=Nh\u1EADp m\u00E3 n\u1EA1p xu
 home.right.xu.title=N\u1EA0P XU
 home.right.xu.button=N\u1EA1p xu
 home.right.login.register=\u0110\u0103ng k\u00ED n\u1EBFu ch\u01B0a c\u00F3 t\u00E0i kho\u1EA3n
-home.header.language=L\u1EF1a ch\u1ECDn ng\u00F4n ng\u1EEF
+home.header.language=Ch\u1ECDn ng\u00F4n ng\u1EEF
+left.banner.xu=taikhoanXu.png
+button.buy=mua.jpg
+button.view=xem.jpg
+product.out=H\u1EBFt h\u00E0ng
+
+left.banner.info=mail_sms.png
+left.banner.voucher=voucher.png
+left.banner.shipment=giaohang.png
 home.header.option1=Ti\u1EBFng Vi\u1EC7t
 home.header.option2=Ti\u1EBFng Anh
 home.nav.menu1=Th\u1EF1c ph\u1EA9m s\u01A1 ch\u1EBF
@@ -173,7 +181,7 @@ changePassword.madatory=Vui l\u00F2ng nh\u1EADp c\u00E1c gi\u00E1 tr\u1ECB c\u1E
 providerFormLogin.loginId=T\u00EAn \u0111\u0103ng nh\u1EADp
 providerFormLogin.loginPassword=M\u1EADt kh\u1EA9u
 providerForm.register=C\u00E1c m\u1EE5c b\u1EAFt bu\u1ED9c
-providerForm.registerMadatory=Vui l\u00F2ng nh\u1EADp c\u00E1c m\u1EE5c b\u1EAFt bu\u1ED9c
+providerForm.registerMadatory=Vui l\u00F2ng nh\u1EADp ch\u00EDnh x\u00E1c c\u00E1c th\u00F4ng tin
 error.Account         = Username "{0}" is invalid.
 error.Address         = Nhap vao dia chi
 error.LogonFailed     = ??ng nh?p kh\u00F4ng th\u00E0nh c\u00F4ng
