--- a/trunk/SourceCode/KLTN/src/ApplicationResources_vi.properties
+++ b/trunk/SourceCode/KLTN/src/ApplicationResources_vi.properties
@@ -85,7 +85,7 @@ checkout.money=S\u1ED1 ti\u1EC1n thanh to\u00E1n l\u00E0
 checkout.optional.home=Thanh to\u00E1n b\u1EB1ng ti\u1EC1n m\u1EB7t t\u1EA1i nh\u00E0
 checkout.optional.xu=Thanh to\u00E1n v\u1EDBi t\u00E0i kho\u1EA3n Xu
 bill.title=H\u00F3a \u0111\u01A1n thanh to\u00E1n
-bill.message=Ch\u00FAng t\u00F4i s\u1EBD g\u1EDFi th\u00F4ng tin \u0111\u01A1n \u0111\u1EB7t h\u00E0ng th\u00F4ng qua mail v\u00E0 \u0111i\u1EC7n tho\u1EA1i c\u1EE7a qu\u00FD kh\u00E1ch
+bill.message=Ch\u00FAng t\u00F4i s\u1EBD g\u1EDFi th\u00F4ng tin \u0111\u01A1n \u0111\u1EB7t h\u00E0ng th\u00F4ng qua mail \!
 bill.sum=T\u1ED5ng ti\u1EC1n
 bill.id=M\u00E3 h\u00F3a \u0111\u01A1n
 bill.idCustomer=M\u00E3 kh\u00E1ch h\u00E0ng
