--- a/SourceCode/KLTN/src/ApplicationResources_en.properties
+++ b/SourceCode/KLTN/src/ApplicationResources_en.properties
@@ -153,7 +153,7 @@ checkout.money = Number Money
 checkout.optional.home = Checkout at home
 checkout.optional.xu = Checkout with xu account
 bill.title = Order Bill
-bill.message = We will send mail and message to you 
+bill.message = We will send mail to you !
 bill.sum = Sum Money
 bill.id = ID
 bill.idCustomer = Customer ID
